--- a/SpaceMarine.csproj
+++ b/SpaceMarine.csproj
@@ -8,6 +8,7 @@
         <LangVersion>latest</LangVersion>
         <Optimize>False</Optimize>
         <DebugType>embedded</DebugType>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     <ItemGroup>
         <Content Include=".github\workflows\build.yml" />
